--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ env:
     - OPENSSL_ROOT_DIR=/usr/local/opt/openssl
     - STEEM_VERSION=v0.14.0rc1
 
+before_install:
+  - rvm get stable --auto-dotfiles
+  - rvm install 2.3.0
+
 install:
   - brew update
   - brew upgrade cmake git autoconf automake libtool openssl
@@ -14,8 +18,6 @@ install:
   # Downgrade boost to 1.58.0
   - brew unlink boost
   - brew install https://raw.githubusercontent.com/Homebrew/homebrew-core/1fa330ce7a067406ff05392dead86cccdc0794bd/Formula/boost.rb
-  # Fix for "shell_session_update: command not found"
-  - rvm get stable --auto-dotfiles
 
 before_script:
   - git clone https://github.com/steemit/steem.git
