--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ language: cpp
 env:
   global:
     - OPENSSL_ROOT_DIR=/usr/local/opt/openssl
-    - STEEM_VERSION=v0.14.0rc1
+    - STEEM_VERSION=v0.14.2
 
 install:
   - brew update
